# pali-canon-analysis

./: .gitignore  docker-compose.yml  pyproject.toml
analytics/notebooks/archives/: eda_02_dictionary_meta.ipynb  etl_01_canon_json_to_csv.ipynb  etl_04_postgres_load.ipynb
notebooks/: canon_index_graph_builder.py  etl_02_canon_transliterate_hela.ipynb  etl_03_sutta_index_build.ipynb  notebook_constraints.md  pali_word_analysis.ipynb  sc-data-wrangler.py  sutta_index.ipynb  text_model_experiments.ipynb  word2vec_tests.ipynb
notebooks/experiments/: eda_03_arango_suttacentral.ipynb
pali-canon-reader/: README.md  main.py
pali-canon-reader/svelte-app/: .gitignore  index.html  vite.config.ts
pali-canon-reader/svelte-app/public/: Canon.graphml
pali-canon-reader/svelte-app/src/: App.svelte  main.ts
pali-canon-reader/svelte-app/src/asserts/: app.css
pali-canon-reader/svelte-app/static-svelte/: index.html
pali_text_models/: __init__.py  init_db.py  models.py
pali_text_models/cypher/: initial.cypher
pg-age-vector/: Dockerfile  README.md  docker-compose.yml  init-extensions.sql
sutta-reader/: README.md  age_query.py  graph_schema.py  init_db.py  main.py  pyproject.toml
sutta-reader/static/: app.js  index.html  styles.css
sutta-reader/svelte-app/: index.html  vite.config.js  vite.config.ts
sutta-reader/svelte-app/src/: App.svelte  app.css  main.js
sutta-reader/svelte-app/src/lib/: DictionaryPane.svelte  GraphViewer.svelte  Nav.svelte  NikayaSection.svelte  Reader.svelte  Verse.svelte  api.js  state.svelte.js  state.svelte.ts  stores.js
(+14 files in other folders)
