[project]
name = "sutta-reader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.1.0",
    "natsort>=8.4.0",
    "strawberry-graphql[fastapi]>=0.220.0",
]

[dependency-groups]
dev = []

[tool.setuptools]
py-modules = ["main", "init_db", "graph_schema", "age_query"]

